# Minecraft

./: .clang-format  .gitignore  CMakeLists.txt
include/: BO.h  GLObject.h  Shader.h  ShaderProgram.h  VAO.h  Vertex.h
res/shaders/: shader.fs  shader.vs
src/: BO.cpp  GLObject.cpp  Shader.cpp  ShaderProgram.cpp  VAO.cpp  main.cpp
